# MiniWebNeopixelsPlus_esp32

./: .gitignore  CMakeLists.txt  bt_eepromlib.cpp  bt_eepromlib.h  partitions_example.csv
main/: Adafruit_rainbow.c  CMakeLists.txt  Kconfig.projbuild  bt_eepromlib.c  bt_eepromlib.h  builtinfiles.h  eeprom_valid.c  eeprom_valid.h  esp_rest_main.c  idf_component.yml  mdi_parse.c  mdi_parse.h  neo_data.c  neo_data.h  neo_ll_api.c  neo_ll_api.h  neo_parsing.c  neo_parsing.h  neo_play.c  neo_script.c  neo_script.h  neo_system.h  rainbow.c  rest_server.c  rest_server.h  servo_defs.c  servo_defs.h  station_example.c  station_example.h
sequences/: neo_user_1.json  neo_user_2.json  neo_user_3.json  neo_user_4.json  neo_user_6.bseq  neo_user_8.json  neo_user_bw.json  neo_user_sc5.json
webpages/: config.html  index.htm  index.js  styles.css
